﻿Version 2.2.0

[h2]Added[/h2]
- Custom Angler quest renewal
- Angler shop
- Added shop compatibility for calamity mod
- Minor code inconsistencies for multilure module
- Improved configuration tooltips